--- a/infra/compose/docker-compose.yml
+++ b/infra/compose/docker-compose.yml
@@ -1,14 +1,31 @@
-version: "3.9"
 services:
-  web:
+  proxy:
     image: caddy:2
     restart: unless-stopped
-    ports: ["80:80"]
+    ports:
+      - "80:80"
+      - "443:443"
     volumes:
-      - ./../../site:/srv
-      - ./../proxy/Caddyfile:/etc/caddy/Caddyfile
+      - ./../proxy/Caddyfile:/etc/caddy/Caddyfile:ro
       - caddy_data:/data
       - caddy_config:/config
+    depends_on:
+      - frontend
+      - backend
+
+  frontend:
+    build:
+      context: ../..           # repo root
+      dockerfile: infra/docker/frontend.Dockerfile
+    restart: unless-stopped
+
+  backend:
+    build:
+      context: ../..
+      dockerfile: infra/docker/backend.Dockerfile
+    restart: unless-stopped
+
 volumes:
   caddy_data: {}
   caddy_config: {}
+
