--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,13 @@
 {
   "name": "frontend",
-  "private": true,
   "version": "0.1.0",
-  "type": "module",
+  "private": true,
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
-    "start": "next start -p 3000 -H 0.0.0.0",
-    "lint": "next lint"
+    "start": "next start -p 3000 -H 0.0.0.0"
   },
   "dependencies": {
-    "katex": "^0.16.11",
-    "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-katex": "^3.1.3"
+    "katex": "^0.16.22"
   }
 }
