--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,15 @@
     "start": "next start -p 3000 -H 0.0.0.0"
   },
   "dependencies": {
-    "katex": "^0.16.22"
+    "katex": "^0.16.11",
+    "next": "15.5.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.3",
+    "eslint": "^9.9.0",
+    "typescript": "^5.5.4"
   }
 }
