--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,12 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.3.3",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4",
     "eslint": "^9.9.0",
-    "typescript": "^5.5.4"
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.3"
   }
 }
