--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,21 +5,18 @@
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
-    "start": "next start -p 3000 -H 0.0.0.0"
+    "start": "next start -p 3000 -H 0.0.0.0",
+    "lint": "next lint"
   },
   "dependencies": {
-    "katex": "^0.16.11",
     "next": "15.5.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4",
-    "eslint": "^9.9.0",
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.3.3"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.5.4"
   }
 }
