--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "15.5.2",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "katex": "^0.16.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
