--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "katex": "^0.16.11",
     "next": "15.5.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "katex": "^0.16.11"
+    "react-katex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.10",
+    "@types/react-katex": "^3.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
